--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-tsparticles": "^1.41.4",
     "reactstrap": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
